<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
  <name>panda_canopen</name>
  
  <version>1.0.0</version>
  
  <description>Package with configuration for managing the CAN bus for the Franka Emika Panda robot.</description>
  
  <author email="lucas.luza@sc.senai.br">Lucas Matana Luza</author>
  <maintainer email="lucas.luza@sc.senai.br">Lucas Matana Luza</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>canopen</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
