<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
  <name>panda_moveit</name>
  
  <version>1.0.0</version>
  
  <description>Package for simulating the Franka Emika Panda robot with MoveIt2 and CANopen.</description>

  <author email="lucas.luza@sc.senai.br">Lucas Matana Luza</author>
  <maintainer email="lucas.luza@sc.senai.br">Lucas Matana Luza</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>canopen</exec_depend>
  <exec_depend>canopen_fake_slaves</exec_depend>

  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_planners_chomp</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_resources_panda_description</exec_depend>

  <exec_depend>gripper_controllers</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  
  <exec_depend>tf2_ros</exec_depend>
  
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
