<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  
  <name>panda_rviz_viewer</name>
  
  <version>1.0.0</version>
  
  <description>Launcher for vizualizing the Franka Emika Panda robot.</description>
  
  <author email="lucas.luza@sc.senai.br">Lucas Matana Luza</author>
  <maintainer email="lucas.luza@sc.senai.br">Lucas Matana Luza</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>

  <exec_depend>xacro</exec_depend>

  <exec_depend>moveit_resources_panda_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
